--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!--final de js-->
         <section class="container hero__main">  
             <div class="hero__textos">
-                <h1 class="title"> ¿Que son los ataques de panico y ansiedad? <span class="title--active">Fuentes informativas</span></h1> 
+                <h1 class="title"> ¿Que son los ataques de Pánico y ansiedad? <span class="title--active">Fuentes informativas</span></h1> 
                 <p class="copy"> Investigación llevada a cabo por alumnos de tercer año<span class="copy__active"></span></p>
                <!-- <a href="#" class="cta">Agenda una demo</a>-->
             </div>
@@ -133,7 +133,7 @@
                     <div class="cards__text">
                         <h3 class="card__title">Proceso<span class="point">.</span></h3>
                         <p class="card__date">27 de abril 2022</p>
-                        <p class="card__copy">comenzamos con la idea de ayudar a las personas pero con una realidas que hoy en dia se vive</p>
+                        <p class="card__copy">comenzamos con la idea de ayudar a las personas pero con una realidad que hoy en dia se vive</p>
                         <!--<a href="#" class="card__button">Comienza a leer</a>-->
                     </div>
                 </div>
