--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section class="services">
             <div class="container">
-                <h2 class="subtitle">Información<span class="point">.</span></h2>
+                <h2 class="subtitle"INFORMACIÓN><span class="point"></span></h2>
                 <p class="copy__section">Lee esta info</p>
 
                 <article class="container-cards">
@@ -99,7 +99,7 @@
                        <img src="img/ansiedad de portada.jfif"class="card__img">
                         <div class="cards__text">
                             <p class="card__list">Ataques de ansiedad </p>
-                            <h3 class="card__title">ANSIEDAD<span class="point">.</span></h3>
+                            <h3 class="card__title">ANSIEDAD<span class="point"></span></h3>
                             <p class="card__copy">La palabra ansiedad se utiliza para describir la respuesta mental y física que se produce ante situaciones de peligro. Se trata de una reacción normal que a veces experimenta todo el mundo....</p>
                             <a href="ansiedad2.html" class="card__button">MAS INFO</a>
                         </div>
@@ -108,7 +108,7 @@
                         <img src="img/panico de portada.jfif" class="card__img">
                         <div class="cards__text">
                             <p class="card__list">Ataques de pánico </p>
-                            <h3 class="card__title">PÁNICO <span class="point">.</span></h3>
+                            <h3 class="card__title">PÁNICO <span class="point"></span></h3>
                             <p class="card__copy">El pánico es un sentimiento que se produce en determinadas situaciones que suponen una amenaza para nosotros/as... </p>
                             <a href="panico2.html" class="card__button">MAS INFO</a>
                         </div>
@@ -117,7 +117,7 @@
                         <img src="img/estres de portada.jfif" class="card__img">
                         <div class="cards__text">
                             <p class="card__list">¿Qué es el estrés?</p>
-                            <h3 class="card__title">ESTRÉS<span class="point">.</span></h3>
+                            <h3 class="card__title">ESTRÉS<span class="point"></span></h3>
                             <p class="card__copy">El estrés es la palabra que muchas personas utilizan para describir un estado en el que las exigencias de la vida se vuelven demasiado grandes como para hacerles frente.</p>
                             <a href="estres2.html" class="card__button">MAS INFO</a>
                         </div>
@@ -126,12 +126,12 @@
             </div>
         </section>
         <section class="projects container">
-            <h2 class="subtitle">PROCESO<span class="point">.</span></h2>
+            <h2 class="subtitle">PROCESO<span class="point"></span></h2>
            <!-- <p class="copy__section">Hemos colaborado con marcas reconocidas a nivel mundial</p>-->
             <article class="container-bg">
                 <div class="card">
                     <div class="cards__text">
-                        <h3 class="card__title">Proceso<span class="point">.</span></h3>
+                        <h3 class="card__title">Proceso<span class="point"></span></h3>
                         <p class="card__date">27 de abril 2022</p>
                         <p class="card__copy">comenzamos con la idea de ayudar a las personas pero con una realidad que hoy en dia se vive</p>
                         <!--<a href="#" class="card__button">Comienza a leer</a>-->
@@ -146,7 +146,7 @@
                 </div>
                 <div class="card">
                     <div class="cards__text">
-                        <h3 class="card__title"> Psicólogo<span class="point">.</span></h3>
+                        <h3 class="card__title"> Psicólogo<span class="point"></span></h3>
                         <p class="card__date">4 de mayo 2022</p>
                         <p class="card__copy">conseguimos una primera entrevista con un  psicólogo</p>
                       <!--  <a href="#" class="card__button">Comienza tu proyecto</a>-->
