--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section class="services">
             <div class="container">
-                <h2 class="subtitle"INFORMACIÓN><span class="point"></span></h2>
+                <h2 class="subtitle">INFORMACIÓN<span class="point"></span></h2>
                 <p class="copy__section">Lee esta info</p>
 
                 <article class="container-cards">
