--- a/index.html
+++ b/index.html
@@ -189,9 +189,15 @@
 
                     <div class="testimony__card">
                        <!-- <img src="img/second_person.jpg" class="testimony__img">-->
-                       <video controls class="testimony__img">
+                      <!-- <video controls class="testimony__img">
                         <source src="video2/video de psicologo.mp4" type="video/mp4">
-                    </video>
+                    </video>-->
+                         <iframe width="359" height="500" 
+                    src="https://www.youtube.com/embed/zysmzPoPbl8"
+                     title="YouTube video player" frameborder="0" 
+                     allow="accelerometer; autoplay; clipboard-write;
+                     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
                        <!-- <div class="testimony__copy">
                             <i class='bx bxl-apple testimony__logo'></i>
                             <div class="testimony__info">
