--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
         
                      <li class="menu__item  menu__item--show">
-                        <a href="#"class="menu__link">VIDEOS<!--<img src="assets/arrow.svg" class="menu__arrow">--></a>
+                        <a href="#"class="menu__link">TIENDA<!--<img src="assets/arrow.svg" class="menu__arrow">--></a>
         
                         <!--<ul class="menu__nesting">
                             <li class="menu__inside">
