--- a/panico2.html
+++ b/panico2.html
@@ -71,7 +71,7 @@
                 </li>
     
                 <li class="menu__item  menu__item--show">
-                    <a href="#" class="menu__link">VIDEOS</a> <!--<img src="assets/arrow.svg" class="menu__arrow"></a>
+                    <a href="cap.html" class="menu__link">TIENDA</a> <!--<img src="assets/arrow.svg" class="menu__arrow"></a>
     
                     <ul class="menu__nesting">
                         <li class="menu__inside">
